--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 click==6.7
 Flask==0.12.2
+Flask-Cors==3.0.3
 Flask-MySQL==1.4.0
 Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
@@ -7,5 +8,6 @@ Jinja2==2.10
 MarkupSafe==1.0
 mysqlclient==1.3.12
 PyMySQL==0.8.0
+six==1.11.0
 SQLAlchemy==1.2.6
 Werkzeug==0.14.1
